(m) fixed overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -142,7 +142,6 @@ hr {
 				font-family: Lato;
 				color:  #000000;
 				font-size: 16px;
-				width: 470px;
 				font-weight: 400;
 				line-height: 24px;
 				text-align: left;
